# ts-portal

./: .gitignore  DATABASE_SCHEMA.md  DEVELOPMENT.md  README-DEPLOYMENT.md  README.md  REFACTORING_PLAN.md  TROUBLESHOOTING.md  docker-compose.yml  rebuild-and-restart.sh  setup-directories.sh  ssl-setup.sh  start.sh  stop.sh
db/init/: 01_create_schemas.sql  02_insert_dummy_members.sql
docs/: DEVELOPMENT_GUIDELINES.md
frontend/: .env  .gitignore  DEPLOYMENT.md  README.md  deploy.sh  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend-new/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-new/src/: App.vue  main.ts  vite-env.d.ts
frontend-new/src/components/: MemberCard.vue
frontend-new/src/components/calendar/: EventCard.vue  EventModal.vue
frontend-new/src/components/feeds/: FeedItem.vue
frontend-new/src/components/notices/: NoticeItem.vue  NoticeModal.vue
frontend-new/src/composables/: useAuth.ts  useCalendar.ts  useCustomer.ts  useFeeds.ts  useMember.ts  useNotices.ts
frontend-new/src/router/: index.ts
frontend-new/src/services/: api.ts  auth.ts  calendar.ts  customer.ts  feeds.ts  member.ts  notices.ts
frontend-new/src/styles/: global.css  variables.css
frontend-new/src/types/: api.ts  auth.ts  calendar.ts  customer.ts  feeds.ts  member.ts  notices.ts
frontend-new/src/utils/: jwt.ts
frontend-new/src/views/: AwsFeedsView.vue  CalendarView.vue  CustomerView.vue  DashboardView.vue  FeedsView.vue  LoginView.vue  MemberView.vue  NotFoundView.vue  NoticeView.vue  NoticesView.vue
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/assets/styles/: calendar.css
frontend/src/components/common/: BaseModal.vue  EmptyState.vue  ErrorMessage.vue  LoadingSpinner.vue  LoadingState.vue  index.ts
frontend/src/components/dashboard/: CalendarWidget.vue  EventModal.vue  SidebarFilters.vue  StatsCards.vue
frontend/src/components/layout/: AppFooter.vue  AppHeader.vue  AppNavigation.vue  AppSidebar.vue  index.ts
frontend/src/composables/: useDashboard.ts  useMsp.ts  useNotices.ts
frontend/src/config/: api.config.ts  app.config.ts  naver.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts  authService.ts  customerService.ts  eventService.ts  index.ts  memberService.ts  noticeService.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts  permissions.ts
frontend/src/views/: AdminView.vue  AwsTipsView.vue  DashboardView.vue  EventsView.vue  HomeView.vue  LoginView.vue  LunchView.vue  MspView.vue  NotFoundView.vue  NoticesView.old.vue  NoticesView.vue  ProfileView.vue  TeamView.vue
honeybox/: Dockerfile  README.md  main.py  main_old.py  requirements.txt
honeybox/app/: __init__.py  config.py  main.py
honeybox/app/models/: __init__.py  schemas.py
honeybox/app/routers/: __init__.py  daily_news.py  feeds.py
honeybox/app/services/: __init__.py  quality_service.py  rss_service.py  selection_service.py  translation_service.py
honeybox/app/utils/: __init__.py  cache.py  date_utils.py
kong/: kong.yml
nginx/: nginx.conf
scripts/: database_setup.sql  insert_dummy_data.sql  validate_consistency.py  validate_consistency_simple.py
services/: __init__.py
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/app/: __init__.py  main.py
services/api-gateway/app/core/: config.py  health.py  metrics.py
services/api-gateway/app/middleware/: auth.py  logging.py  rate_limit.py
services/api-gateway/app/routes/: auth.py  calendar.py  customers.py  feeds.py  members.py  notices.py
services/api-gateway/app/services/: service_registry.py
services/auth-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/auth-service/app/: __init__.py  database.py  main.py  models.py  routers.py  schemas.py  service.py
services/calendar-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/calendar-service/app/: __init__.py  database.py  main.py  models.py  routers.py  schemas.py  service.py
services/customer-service/: Dockerfile  README.md  pyproject.toml
services/customer-service/app/: __init__.py  database.py  main.py  models.py  routers.py  schemas.py  service.py
services/feeds-service/: Dockerfile  README.md  pyproject.toml
services/feeds-service/app/: main.py
services/member-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/member-service/app/: __init__.py  database.py  main.py  models.py  routers.py  schemas.py  service.py
services/notice-service/: Dockerfile  README.md  pyproject.toml
services/notice-service/app/: database.py  main.py  models.py  routers.py  schemas.py  service.py
services/shared/: __init__.py  database.py  types.py
terraform/: .terraform.lock.hcl  README.md  cicd.tf  ec2.tf  local.tf  outputs.tf  providers.tf
ts-portal-db/: .dockerignore  Dockerfile  README.md  init_auth_system.py  init_sample_data.py  main.py  requirements.txt
ts-portal-db/app/: database.py  main.py
ts-portal-db/app/models/: __init__.py  assignment.py  customer.py  event.py  member.py  notice.py
ts-portal-db/app/routers/: __init__.py  auth.py  customers.py  events.py  members.py  notices.py
ts-portal-db/app/schemas/: __init__.py  auth.py  customer.py  event.py  member.py  notice.py
ts-portal-db/app/services/: auth_service.py  customer_service.py  event_service.py  member_service.py  notice_service.py
ts-portal-db/app/utils/: __init__.py
ts-portal-db/data/: .gitkeep
(+14 files in other folders)
