[project]
name = "ts-portal-auth-service"
version = "0.1.0"
description = "TS Portal Auth Service - ì¸ì¦/ì¸ê°€ ë§ˆì´í¬ë¡œì„œë¹„ìŠ¤"
authors = [
    {name = "Seungdo Bae", email = "seungdobae@saltware.co.kr"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "pyjwt>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ðŸ”§ ë¹Œë“œ ì„¤ì • - íŒ¨í‚¤ì§€ ê²½ë¡œ ëª…ì‹œ
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
] 