[project]
name = "ts-portal-feeds-service"
version = "0.1.0"
description = "TS Portal Feeds Service - AWS ì†Œì‹ ìˆ˜ì§‘ ë§ˆì´í¬ë¡œì„œë¹„ìŠ¤"
authors = [
    {name = "Seungdo Bae", email = "seungdobae@saltware.co.kr"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.2",
    "feedparser>=6.0.10",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ðŸ”§ ë¹Œë“œ ì„¤ì • - íŒ¨í‚¤ì§€ ê²½ë¡œ ëª…ì‹œ
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
] 